--- a/src/html/index.html
+++ b/src/html/index.html
@@ -653,7 +653,19 @@
           </div>
         </section>
       </main>
-      <footer></footer>
+      <footer class="l-footer">
+        <div class="l-footer__bg">
+        </div>
+        <div class="l-footer__container">
+          <div class="footer-info">
+            <h3>Hipcamp is everywhere you want to camp.</h3>
+            <p>Discover unique experiences on ranches, nature preserves, farms, vineyards, and public campgrounds across the U.S. Book tent camping, treehouses, cabins, yurts, primitive backcountry sites, car camping, airstreams, tiny houses, RV camping, glamping tents and more.</p>
+          </div>
+          <div class="footer-about"></div>
+          <div class="footer-plan"></div>
+          <div class="footer-help"></div>
+        </div>
+      </footer>
     </div>
   </body>
 </html>
