--- a/src/html/index.html
+++ b/src/html/index.html
@@ -654,17 +654,55 @@
         </section>
       </main>
       <footer class="l-footer">
-        <div class="l-footer__bg">
-        </div>
         <div class="l-footer__container">
           <div class="footer-info">
             <h3>Hipcamp is everywhere you want to camp.</h3>
             <p>Discover unique experiences on ranches, nature preserves, farms, vineyards, and public campgrounds across the U.S. Book tent camping, treehouses, cabins, yurts, primitive backcountry sites, car camping, airstreams, tiny houses, RV camping, glamping tents and more.</p>
+            <div class="footer-info__download">
+              <h3>Download Our App</h3>
+              <div class="down-img">
+                <a href="/">
+                  <img src="../img/download-on-the-app-store-apple-1.png" alt="app-store">
+                </a>
+                <a href="/">
+                  <img src="../img/google-play-badge.png" alt="app-store">
+                </a>
+              </div>
+            </div>
           </div>
-          <div class="footer-about"></div>
-          <div class="footer-plan"></div>
-          <div class="footer-help"></div>
+          <div class="footer-tag">
+            <div class="footer-about">
+              <h3>Get to Know Us</h3>
+              <ul>
+                <li><a href="/">About Us</a></li>
+                <li><a href="/">Rules & Reservation Policies</a></li>
+                <li><a href="/">Accessibility</a></li>
+                <li><a href="/">Media Center</a></li>
+                <li><a href="/">Site Map</a></li>
+              </ul>
+            </div>
+            <div class="footer-plan">
+              <h3>Plan with Us</h3>
+              <ul>
+                <li><a href="/">Find Trip Inspiration</a></li>
+                <li><a href="/">Build a Trip</a></li>
+                <li><a href="/">Buy a Pass</a></li>
+                <li><a href="/">Enter a Lottery</a></li>
+              </ul>
+            </div>
+            <div class="footer-help">
+              <h3>Let Us Help You</h3>
+              <ul>
+                <li><a href="/">Your Account</a></li>
+                <li><a href="/">Your Reservations</a></li>
+                <li><a href="/">Contact Us</a></li>
+                <li><a href="/">Help Center</a></li>
+                <li><a href="/">Submit Feedback</a></li>
+              </ul>
+            </div>
+          </div>
         </div>
+        <address>© 2020. All rights reserved.</address>
       </footer>
     </div>
   </body>
