--- a/src/html/index.html
+++ b/src/html/index.html
@@ -23,7 +23,7 @@
                 </a>
                 </div>
               </div>
-              <div class="nav-list">
+              <div class="nav-list xs-hidden">
                 <ul>
                   <li><a href="/">Home</a></li>
                   <li><a href="/">Destination</a></li>
@@ -36,12 +36,25 @@
                 </ul>
               </div>
             </div>
-            <div class="l-head__account">
+            <div class="l-head__account xs-hidden">
               <div class="l-head__account__signup">
                 <a href="/">Sign Up</a>
               </div>
               <div class="l-head__account__signin">
                 <a href="/">Sign In</a>
+              </div>
+            </div>
+            <div class="l-head__menu md-hidden xs-inflex">
+              <div class="l-head__menu__btn">
+                <a href="/">
+                <svg xmlns="http://www.w3.org/2000/svg" width="22.487" height="13" viewBox="0 0 22.487 13">
+                  <g id="Group_319" data-name="Group 319" transform="translate(-358.756 -58.5)">
+                    <line id="Line_2" data-name="Line 2" x2="20.487" transform="translate(359.756 59.5)" fill="none" stroke="#e76f51" stroke-linecap="round" stroke-width="2"/>
+                    <line id="Line_3" data-name="Line 3" x2="20.487" transform="translate(359.756 65.5)" fill="none" stroke="#e76f51" stroke-linecap="round" stroke-width="2"/>
+                    <line id="Line_4" data-name="Line 4" x2="20.487" transform="translate(359.756 70.5)" fill="none" stroke="#e76f51" stroke-linecap="round" stroke-width="2"/>
+                  </g>
+                </svg>
+              </a>
               </div>
             </div>
           </nav>
@@ -51,7 +64,10 @@
       <section class="p-mainvisual">
         <div class="p-mainvisual__info">
           <h2>Find Yourself <br>Outside.</h2>
-          <p>Book unique camping experiences on over 300,000 campsites,<br> cabins, RV parks, public parks and more.</p>
+          <p>Book unique camping experiences on over <br class="md-hidden xs-block"> 300,000 campsites,<br class="xs-hidden"> cabins, RV parks,<br class="md-hidden xs-block"> public parks and more.</p>
+          <div class="c-btn p-mainvisual__btn">
+            <a href="/">Discover</a>
+          </div>
         </div>
       </section>
 
@@ -414,7 +430,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="c-destination-card">
+                <div class="c-destination-card xs-hidden">
                   <div class="c-destination-card__img">
                     <img src="../img/zach-betten-K9olx8OF36A-unsplash.png" alt="d-img">
                     <div class="c-destination-card__img__overlay">
@@ -437,7 +453,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="c-destination-card">
+                <div class="c-destination-card xs-hidden">
                   <div class="c-destination-card__img">
                     <img src="../img/zach-betten-K-3.png" alt="d-img">
                     <div class="c-destination-card__img__overlay">
@@ -460,7 +476,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="c-destination-card">
+                <div class="c-destination-card xs-hidden">
                   <div class="c-destination-card__img">
                     <img src="../img/zach-betten-K-6.png" alt="d-img">
                     <div class="c-destination-card__img__overlay">
@@ -483,7 +499,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="c-destination-card">
+                <div class="c-destination-card xs-hidden">
                   <div class="c-destination-card__img">
                     <img src="../img/zach-betten-K-9.png" alt="d-img">
                     <div class="c-destination-card__img__overlay">
@@ -506,7 +522,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="c-destination-card">
+                <div class="c-destination-card xs-hidden">
                   <div class="c-destination-card__img">
                     <img src="../img/zach-betten-K-1.png" alt="d-img">
                     <div class="c-destination-card__img__overlay">
@@ -529,7 +545,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="c-destination-card">
+                <div class="c-destination-card xs-hidden">
                   <div class="c-destination-card__img">
                     <img src="../img/zach-betten-K-4.png" alt="d-img">
                     <div class="c-destination-card__img__overlay">
@@ -552,7 +568,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="c-destination-card">
+                <div class="c-destination-card xs-hidden">
                   <div class="c-destination-card__img">
                     <img src="../img/zach-betten-K-7.png" alt="d-img">
                     <div class="c-destination-card__img__overlay">
@@ -575,7 +591,7 @@
                     </div>
                   </div>
                 </div>
-                <div class="c-destination-card">
+                <div class="c-destination-card xs-hidden">
                   <div class="c-destination-card__img">
                     <img src="../img/zach-betten-K-10.png" alt="d-img">
                     <div class="c-destination-card__img__overlay">
@@ -620,12 +636,14 @@
               </defs>
               <path id="Path_954" data-name="Path 954" d="M519.044,1000.568c286.66,0,653.871-523.406,308.75-523.406S805.7,0,519.044,0,0,223.985,0,500.284,232.384,1000.568,519.044,1000.568Z" fill="url(#linear-gradient)"/>
             </svg>
-            
           </div>
           <div class="p-subscribe__inner">
+            <div class="subscribe-img">
+              <img src="../img/Group 316.png" alt="">
+            </div>
             <div class="subscribe-info">
               <div class="subscribe-info__inner">
-                <h2>Let's Stay in Touch</h2>
+                <h2>Let's Stay <br class="xs-block md-hidden"> in Touch</h2>
                 <p>Get travel planning ideas, helpful tips, and stories from our visitors<br> delivered right to your inbox.</p>
                 <div class="subscribe-form">
                 <form>
@@ -647,28 +665,20 @@
                 </div>
               </div>
             </div>
-            <div class="subscribe-img">
-              <img src="../img/Group 316.png" alt="">
-            </div>
+
           </div>
         </section>
       </main>
       <footer class="l-footer">
+        <div class="btt-btn">
+          <svg xmlns="http://www.w3.org/2000/svg" width="18.68" height="22.175" viewBox="0 0 18.68 22.175">
+            <path id="Path_958" data-name="Path 958" d="M22.175,9.358a1.43,1.43,0,0,0-1.43-1.43H5.063l5.813-5.42A1.43,1.43,0,1,0,8.923.421L.455,8.311a1.43,1.43,0,0,0,0,2.091L8.923,18.3A1.43,1.43,0,1,0,10.875,16.2L5.063,10.788H20.746A1.43,1.43,0,0,0,22.175,9.358Z" transform="translate(18.68) rotate(90)" fill="#e76f51"/>
+          </svg>
+        </div>
         <div class="l-footer__container">
           <div class="footer-info">
             <h3>Hipcamp is everywhere you want to camp.</h3>
             <p>Discover unique experiences on ranches, nature preserves, farms, vineyards, and public campgrounds across the U.S. Book tent camping, treehouses, cabins, yurts, primitive backcountry sites, car camping, airstreams, tiny houses, RV camping, glamping tents and more.</p>
-            <div class="footer-info__download">
-              <h3>Download Our App</h3>
-              <div class="down-img">
-                <a href="/">
-                  <img src="../img/download-on-the-app-store-apple-1.png" alt="app-store">
-                </a>
-                <a href="/">
-                  <img src="../img/google-play-badge.png" alt="app-store">
-                </a>
-              </div>
-            </div>
           </div>
           <div class="footer-tag">
             <div class="footer-about">
@@ -700,6 +710,17 @@
                 <li><a href="/">Submit Feedback</a></li>
               </ul>
             </div>
+          </div>
+        </div>
+        <div class="footer-info__download">
+          <h3>Download Our App</h3>
+          <div class="down-img">
+            <a href="/">
+              <img src="../img/download-on-the-app-store-apple-1.png" alt="app-store">
+            </a>
+            <a href="/">
+              <img src="../img/google-play-badge.png" alt="app-store">
+            </a>
           </div>
         </div>
         <address>© 2020. All rights reserved.</address>
