--- a/src/html/index.html
+++ b/src/html/index.html
@@ -14,7 +14,7 @@
         <section class="l-head">
           <nav>
             <div class="l-head__nav">
-              <div class="nav-logo">
+              <h1 class="nav-logo">
                 <div class="nav-logo__bg">
                   <a href="/">
                   <svg xmlns="http://www.w3.org/2000/svg" width="18.951" height="17.28" viewBox="0 0 18.951 17.28">
@@ -22,7 +22,7 @@
                   </svg>
                 </a>
                 </div>
-              </div>
+              </h1>
               <div class="nav-list xs-hidden">
                 <ul>
                   <li><a href="/">Home</a></li>
@@ -671,9 +671,11 @@
       </main>
       <footer class="l-footer">
         <div class="btt-btn">
+          <a href="/">
           <svg xmlns="http://www.w3.org/2000/svg" width="18.68" height="22.175" viewBox="0 0 18.68 22.175">
             <path id="Path_958" data-name="Path 958" d="M22.175,9.358a1.43,1.43,0,0,0-1.43-1.43H5.063l5.813-5.42A1.43,1.43,0,1,0,8.923.421L.455,8.311a1.43,1.43,0,0,0,0,2.091L8.923,18.3A1.43,1.43,0,1,0,10.875,16.2L5.063,10.788H20.746A1.43,1.43,0,0,0,22.175,9.358Z" transform="translate(18.68) rotate(90)" fill="#e76f51"/>
           </svg>
+          </a>
         </div>
         <div class="l-footer__container">
           <div class="footer-info">
