--- a/src/html/index.html
+++ b/src/html/index.html
@@ -72,7 +72,7 @@
       </section>
 
       <section class="p-services">
-        <div class="p-services__container">
+        <div class="p-services__container inner-wrapper">
           <div class="c-services-card">
             <svg id="Group_203" data-name="Group 203" xmlns="http://www.w3.org/2000/svg" width="90" height="90" viewBox="0 0 90 90">
               <rect id="Rectangle_53" data-name="Rectangle 53" width="90" height="90" fill="none"/>
@@ -213,7 +213,7 @@
 
       <main>
         <section class="p-destination mx-auto">
-          <div class="p-destination__container">
+          <div class="p-destination__container inner-wrapper">
             <div class="destination-logo mx-auto">
               <svg xmlns="http://www.w3.org/2000/svg" width="70" height="70" viewBox="0 0 70 70">
                 <circle id="Ellipse_58" data-name="Ellipse 58" cx="35" cy="35" r="35" fill="#e76f51"/>
@@ -625,47 +625,49 @@
           </div>
         </section>
 
-        <section class="p-subscribe">
-          <div class="p-subscribe__blob">
-            <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="967.668" height="1000.568" viewBox="0 0 967.668 1000.568">
-              <defs>
-                <linearGradient id="linear-gradient" x1="0.102" y1="0.459" x2="1.115" y2="0.475" gradientUnits="objectBoundingBox">
-                  <stop offset="0" stop-color="#ffd2c6"/>
-                  <stop offset="1" stop-color="#fff"/>
-                </linearGradient>
-              </defs>
-              <path id="Path_954" data-name="Path 954" d="M519.044,1000.568c286.66,0,653.871-523.406,308.75-523.406S805.7,0,519.044,0,0,223.985,0,500.284,232.384,1000.568,519.044,1000.568Z" fill="url(#linear-gradient)"/>
-            </svg>
-          </div>
-          <div class="p-subscribe__inner">
-            <div class="subscribe-img">
-              <img src="../img/Group 316.png" alt="">
+        <section class="inner-wrapper">
+          <div class="p-subscribe">
+            <div class="p-subscribe__blob">
+              <svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" width="967.668" height="1000.568" viewBox="0 0 967.668 1000.568">
+                <defs>
+                  <linearGradient id="linear-gradient" x1="0.102" y1="0.459" x2="1.115" y2="0.475" gradientUnits="objectBoundingBox">
+                    <stop offset="0" stop-color="#ffd2c6"/>
+                    <stop offset="1" stop-color="#fff"/>
+                  </linearGradient>
+                </defs>
+                <path id="Path_954" data-name="Path 954" d="M519.044,1000.568c286.66,0,653.871-523.406,308.75-523.406S805.7,0,519.044,0,0,223.985,0,500.284,232.384,1000.568,519.044,1000.568Z" fill="url(#linear-gradient)"/>
+              </svg>
             </div>
-            <div class="subscribe-info">
-              <div class="subscribe-info__inner">
-                <h2>Let's Stay <br class="xs-block md-hidden"> in Touch</h2>
-                <p>Get travel planning ideas, helpful tips, and stories from our visitors<br> delivered right to your inbox.</p>
-                <div class="subscribe-form">
-                <form>
-                  <div class="form-group">
-                    <span>
-                      <svg id="Group_235" data-name="Group 235" xmlns="http://www.w3.org/2000/svg" width="24.242" height="17.746" viewBox="0 0 24.242 17.746">
-                      <path id="Path_908" data-name="Path 908" d="M26.215,17.058H8.027A3.03,3.03,0,0,0,5,20.085V31.777A3.031,3.031,0,0,0,8.027,34.8H26.215a3.031,3.031,0,0,0,3.027-3.027V20.085A3.03,3.03,0,0,0,26.215,17.058Zm-18.188.857H26.215a2.168,2.168,0,0,1,1.829,1.007l-9.328,8.81a2.354,2.354,0,0,1-3.189,0L6.2,18.923A2.169,2.169,0,0,1,8.027,17.915ZM5.878,32.062a2.207,2.207,0,0,1-.021-.285V20.085a2.163,2.163,0,0,1,.021-.285l6.491,6.131Zm20.337,1.885H8.027A2.168,2.168,0,0,1,6.2,32.94l6.8-6.419,1.944,1.835a3.22,3.22,0,0,0,4.366,0l1.943-1.835,6.8,6.418A2.167,2.167,0,0,1,26.215,33.947Zm2.169-13.862V31.777a2.2,2.2,0,0,1-.021.285l-6.491-6.131L28.364,19.8A2.251,2.251,0,0,1,28.384,20.085Z" transform="translate(-5 -17.058)" fill="#8d8d8d"/>
+            <div class="p-subscribe__inner">
+              <div class="subscribe-img">
+                <img src="../img/Group 316.png" alt="">
+              </div>
+              <div class="subscribe-info">
+                <div class="subscribe-info__inner">
+                  <h2>Let's Stay <br class="xs-block md-hidden"> in Touch</h2>
+                  <p>Get travel planning ideas, helpful tips, and stories from our visitors<br> delivered right to your inbox.</p>
+                  <div class="subscribe-form">
+                  <form>
+                    <div class="form-group">
+                      <span>
+                        <svg id="Group_235" data-name="Group 235" xmlns="http://www.w3.org/2000/svg" width="24.242" height="17.746" viewBox="0 0 24.242 17.746">
+                        <path id="Path_908" data-name="Path 908" d="M26.215,17.058H8.027A3.03,3.03,0,0,0,5,20.085V31.777A3.031,3.031,0,0,0,8.027,34.8H26.215a3.031,3.031,0,0,0,3.027-3.027V20.085A3.03,3.03,0,0,0,26.215,17.058Zm-18.188.857H26.215a2.168,2.168,0,0,1,1.829,1.007l-9.328,8.81a2.354,2.354,0,0,1-3.189,0L6.2,18.923A2.169,2.169,0,0,1,8.027,17.915ZM5.878,32.062a2.207,2.207,0,0,1-.021-.285V20.085a2.163,2.163,0,0,1,.021-.285l6.491,6.131Zm20.337,1.885H8.027A2.168,2.168,0,0,1,6.2,32.94l6.8-6.419,1.944,1.835a3.22,3.22,0,0,0,4.366,0l1.943-1.835,6.8,6.418A2.167,2.167,0,0,1,26.215,33.947Zm2.169-13.862V31.777a2.2,2.2,0,0,1-.021.285l-6.491-6.131L28.364,19.8A2.251,2.251,0,0,1,28.384,20.085Z" transform="translate(-5 -17.058)" fill="#8d8d8d"/>
+                        </svg>
+                      </span>
+                      <input type="email" placeholder="Email Address">
+                    </div>
+                    <div class="form-btn">
+                      <a href="/"><svg id="Group_236" data-name="Group 236" xmlns="http://www.w3.org/2000/svg" width="24.162" height="18.23" viewBox="0 0 24.162 18.23">
+                        <path id="Path_909" data-name="Path 909" d="M9.778,15.82,6.954,17.7a.55.55,0,0,1-.816-.439V13.121l11.546-8.66L3.88,11.8.3,9.356A.748.748,0,0,1,.491,8.039L23.709-.37c.314-.126.565.251.377.565L13.606,17.514a.773.773,0,0,1-1.067.188Z" transform="translate(0.012 0.395)" fill="#fff" fill-rule="evenodd"/>
                       </svg>
-                    </span>
-                    <input type="email" placeholder="Email Address">
+                      </a>
+                    </div>
+                  </form>
                   </div>
-                  <div class="form-btn">
-                    <a href="/"><svg id="Group_236" data-name="Group 236" xmlns="http://www.w3.org/2000/svg" width="24.162" height="18.23" viewBox="0 0 24.162 18.23">
-                      <path id="Path_909" data-name="Path 909" d="M9.778,15.82,6.954,17.7a.55.55,0,0,1-.816-.439V13.121l11.546-8.66L3.88,11.8.3,9.356A.748.748,0,0,1,.491,8.039L23.709-.37c.314-.126.565.251.377.565L13.606,17.514a.773.773,0,0,1-1.067.188Z" transform="translate(0.012 0.395)" fill="#fff" fill-rule="evenodd"/>
-                    </svg>
-                    </a>
-                  </div>
-                </form>
                 </div>
               </div>
+  
             </div>
-
           </div>
         </section>
       </main>
