--- a/src/html/index.html
+++ b/src/html/index.html
@@ -10,6 +10,23 @@
   </head>
   <body>
     <div class="container">
+      <div class="l-head__overlay">
+        <div class="l-wrap-inner">
+          <div class="c-btn close">
+            <svg xmlns="http://www.w3.org/2000/svg" x="0px" y="0px" width="30" height="30" viewBox="0,0,256,256">
+              <g fill="#ffffff" fill-rule="nonzero" stroke="none" stroke-width="1" stroke-linecap="butt" stroke-linejoin="miter" stroke-miterlimit="10" stroke-dasharray="" stroke-dashoffset="0" font-family="none" font-weight="none" font-size="none" text-anchor="none" style="mix-blend-mode: normal"><g transform="scale(5.12,5.12)"><path d="M9.15625,6.3125l-2.84375,2.84375l15.84375,15.84375l-15.9375,15.96875l2.8125,2.8125l15.96875,-15.9375l15.9375,15.9375l2.84375,-2.84375l-15.9375,-15.9375l15.84375,-15.84375l-2.84375,-2.84375l-15.84375,15.84375z"></path></g></g>
+              </svg>
+          </div>
+          <div class="l-head__account">
+            <div class="l-head__account__signup">
+              <a href="/">Sign Up</a>
+            </div>
+            <div class="l-head__account__signin">
+              <a href="/">Sign In</a>
+            </div>
+          </div>
+        </div>
+      </div>
       <header>
         <section class="l-head l-wrap-inner">
           <nav>
@@ -46,7 +63,6 @@
             </div>
             <div class="l-head__menu md-hidden xs-inflex">
               <div class="l-head__menu__btn">
-                <a href="/">
                 <svg xmlns="http://www.w3.org/2000/svg" width="22.487" height="13" viewBox="0 0 22.487 13">
                   <g id="Group_319" data-name="Group 319" transform="translate(-358.756 -58.5)">
                     <line id="Line_2" data-name="Line 2" x2="20.487" transform="translate(359.756 59.5)" fill="none" stroke="#e76f51" stroke-linecap="round" stroke-width="2"/>
@@ -54,7 +70,6 @@
                     <line id="Line_4" data-name="Line 4" x2="20.487" transform="translate(359.756 70.5)" fill="none" stroke="#e76f51" stroke-linecap="round" stroke-width="2"/>
                   </g>
                 </svg>
-              </a>
               </div>
             </div>
           </nav>
